--- a/index.html
+++ b/index.html
@@ -218,6 +218,51 @@ const UNSPLASH_ACCESS_KEY = "OyP5c6t6jgtb7wrPLYjgX1umRAz8rAY5kuww7muP7x0"; // ל
 
     // FIX: רג׳קס נכון לזיהוי עברית
     const hasHebrew = (s) => /[\u0590-\u05FF]/.test(s);
+// גודל יעד חכם לפי המסך + קצת רנדומליות
+function pickRandomSize() {
+  const vw = Math.max(document.documentElement.clientWidth || 0, window.innerWidth || 0);
+  const vh = Math.max(document.documentElement.clientHeight || 0, window.innerHeight || 0);
+
+  // יחס מסך
+  const ratio = vw / vh;
+
+  // טווחים גמישים שייצאו חדים אבל לא מפלצתיים
+  let baseW = Math.round(vw * (0.7 + Math.random() * 0.6));  // 70%–130% מרוחב המסך
+  let baseH = Math.round(baseW / ratio);
+
+  // קצת ערבוב כדי שלא יהיה תמיד לפי יחס מסך
+  if (Math.random() < 0.35) {
+    baseH = Math.round(vh * (0.7 + Math.random() * 0.6));
+    baseW = Math.round(baseH * ratio);
+  }
+
+  // DPI גבוהים: להכפיל לפי DPR עד תקרה
+  const dpr = Math.min(window.devicePixelRatio || 1, 2.5);
+  let w = Math.min(Math.round(baseW * dpr), 4096);
+  let h = Math.min(Math.round(baseH * dpr), 4096);
+
+  // אל תיפול על מספרים קטנים
+  w = Math.max(w, 600);
+  h = Math.max(h, 400);
+
+  return { w, h };
+}
+
+// מחזיר URL רנדומלי מפיקסום עם שינוי גודל
+function buildPicsumUrl() {
+  const { w, h } = pickRandomSize();
+  const cacheBust = Date.now() + "_" + Math.floor(Math.random() * 1e9);
+  // אפשר להוסיף פרמטרים כמו blur=1 או grayscale=1 אם תרצה
+  return {
+    url: `https://picsum.photos/${w}/${h}?r=${cacheBust}`,
+    query: `picsum ${w}×${h}` // רק לטקסט העליון אם תרצה להציג
+  };
+}
+
+// "Fetcher" בסגנון הקוד הקיים
+async function fetchPicsumRandom(token) {
+  const { url, query } = buildPicsumUrl();
+  // אין צור
 
     function extractValidWordsEN(t) {
       return (t || "")
@@ -484,13 +529,16 @@ async function fetchAndAppendNewImage(){
   if (isFetching){ dlog("Skip: already fetching"); return; }
   isFetching = true; const myToken = ++fetchToken;
   try{
-    const query = await buildQueryByMode();
-    dlog("Query:", query);
+    // לא באמת צריך query, אבל נשאיר תאימות ל־UI שלך
+    const builtQuery = await buildQueryByMode();
 
-    let imgUrl = await fetchUnsplashByQuery(query, myToken);
-    if (!imgUrl) imgUrl = await fetchUnsplashRandom(myToken);
-
+    // מביאים URL מפיקסום
+    const got = await fetchPicsumRandom(myToken);
     if (myToken !== fetchToken) return;
+
+    const imgUrl = got?.url;
+    const query  = got?.query || builtQuery || "";
+
     if (imgUrl){
       if (index < history.length-1) history.length = index + 1;
       history.push({ url: imgUrl, query }); index = history.length - 1;
@@ -506,6 +554,7 @@ async function fetchAndAppendNewImage(){
     isFetching = false;
   }
 }
+
 
 
     async function buildQueryByMode(){
@@ -596,4 +645,5 @@ async function fetchAndAppendNewImage(){
   </script>
 </body>
 </html>
+
 
