--- a/index.html
+++ b/index.html
@@ -14,13 +14,39 @@
     }
 
     /* אזור עליון – עוגן לשכבות העל */
-    #topWrap{
-      position: relative;
-      height: calc(100vh - var(--ui-h));
-      width:100%;
-      display:flex; flex-direction:column; align-items:center; justify-content:flex-start;
-      box-sizing:border-box; padding-top:6px;
-    }
+    /* עוגן לאזור העליון – דינמי ויציב במובייל */
+#topWrap{
+  position: relative;
+  height: calc(100dvh - var(--ui-h));
+  width:100%;
+  display:flex; flex-direction:column; align-items:center; justify-content:flex-start;
+  box-sizing:border-box; padding-top:6px;
+}
+@supports not (height: 100dvh) {
+  #topWrap{ height: calc(100vh - var(--ui-h)); }
+}
+/* אזורי טאץ' לקצוות המסך (מופעלים רק במובייל/טאבלט) */
+.tapZone{
+  display:none;
+  position:fixed;
+  top:0;
+  bottom:var(--ui-h);   /* לא חוסם את ה-controls */
+  width:33vw;           /* אפשר לשנות ל-30–40vw לפי הטעם */
+  z-index:5;            /* נמוך מה-controls (z=10) כדי שהכפתורים יישארו קליקים */
+  -webkit-tap-highlight-color: transparent;
+  background: transparent;
+}
+.tapLeft{  left:0; }
+.tapRight{ right:0; }
+
+/* הפעלה רק במובייל / מסכי טאץ' */
+@media (max-width: 900px), (pointer: coarse){
+  .tapZone{ display:block; }
+}
+
+/* פידבק קל בלחיצה (אופציונלי) */
+.tapZone:active{ background: rgba(255,255,255,0.03); }
+
 
     /* טקסט השאילתה – שכבת-על, לא מזיזה את התמונה */
     #queryText{
@@ -59,34 +85,47 @@
       flex:1 1 auto; width:100%;
       display:flex; align-items:center; justify-content:center;
     }
-    #mainImg{
-      max-width:95vw; max-height:100%;
-      border-radius:8px;
-      opacity:0;
-      transition: opacity var(--fade-ms) ease-in-out;
-      will-change: opacity;
-      user-select:none; pointer-events:none; background:transparent;
-      display:block;
-    }
-    #mainImg.visible{ opacity:1; }
-    @media (min-width: 901px) and (pointer: fine){
-      #mainImg{ max-width:90vw; max-height:90vh; }
-    }
+   #mainImg{
+  width:auto; height:auto;                /* לא "מתיחה" קשיחה */
+  max-width:94vw;
+  max-height: calc(100dvh - var(--ui-h) - 12px);  /* תמיד נשארת מעל ה-controls */
+  border-radius:8px;
+  opacity:0;
+  transition: opacity var(--fade-ms) ease-in-out;
+  will-change: opacity;
+  user-select:none; pointer-events:none; background:transparent;
+  display:block;
+}
+@supports not (height: 100dvh) {
+  #mainImg{ max-height: calc(100vh - var(--ui-h) - 12px); }
+}
+
+/* דסקטופ עדין כמו שהיה */
+@media (min-width: 901px) and (pointer: fine){
+  #mainImg{ max-width:90vw; max-height:90vh; }
+}
 
     /* UI תחתון למובייל בלבד */
-    .controls{ display:none; position:fixed; left:0; right:0; bottom:0; height:30vh; }
-    .controls-inner{
-      height:100%; width:100%; max-width:560px; margin:0 auto;
-      display:flex; flex-direction:column; justify-content:center; gap:10px;
-      padding:10px 12px; box-sizing:border-box;
-      background: rgba(255,255,255,0.06);
-      border-top: 1px solid rgba(255,255,255,0.12);
-      backdrop-filter: blur(10px);
-    }
-    @media (max-width: 900px), (pointer: coarse){
-      :root{ --ui-h: 30vh; }
-      .controls{ display:block; }
-    }
+.controls{
+  display:none; position:fixed; left:0; right:0; bottom:0;
+  height:30vh; z-index:10;               /* מעל הכל */
+  padding-bottom: env(safe-area-inset-bottom); /* רווח ל-notch */
+}
+.controls-inner{
+  height:100%; width:100%; max-width:560px; margin:0 auto;
+  display:flex; flex-direction:column; justify-content:center; gap:10px;
+  padding:10px 12px; box-sizing:border-box;
+  background: rgba(255,255,255,0.06);
+  border-top: 1px solid rgba(255,255,255,0.12);
+  backdrop-filter: blur(10px);
+}
+@media (max-width: 900px), (pointer: coarse){
+  :root{ --ui-h: 28vh; }   /* טיפונת פחות כדי לתת עוד מקום לתמונה */
+  .controls{ display:block; }
+  .controls-inner{ max-width: 100%; }
+  .controls button{ font-size:16px; padding:14px 16px; }
+}
+
     .row{ display:flex; gap:10px; justify-content:center; width:100%; }
     .row.nav button{ flex:1; min-width:140px; }
     .row.modes button{ flex:1; min-width:90px; }
@@ -117,6 +156,8 @@
       <img id="mainImg" alt="">
     </div>
   </div>
+<div id="tapLeft"  class="tapZone tapLeft"  aria-hidden="true"></div>
+<div id="tapRight" class="tapZone tapRight" aria-hidden="true"></div>
 
   <div class="controls" id="controls">
     <div class="controls-inner">
@@ -320,6 +361,8 @@ document.addEventListener("keydown", (ev) => {
   else if (k === "arrowright") navigate(+1);
   else if (k === "l")  { debugVisible = !debugVisible; updateDebugVis(); }
 });
+document.getElementById('tapLeft')?.addEventListener('click', () => navigate(-1));
+document.getElementById('tapRight')?.addEventListener('click', () => navigate(+1));
 
 // ----- Init -----
 updateDebugVis();   // אם יש <pre id="debug">
@@ -328,6 +371,7 @@ fetchAndAppendNewImage();
   </script>
 </body>
 </html>
+
 
 
 
